--- a/weapp/static_v2/js/view/stats_date_filter_view/template.html
+++ b/weapp/static_v2/js/view/stats_date_filter_view/template.html
@@ -41,9 +41,9 @@
 		<div class="xui-i-item">
 			快速查看：
 			<ul class="xui-inline">
-				<li class="xui-i-shortcut"><a data-value="0" href="javascript:void(0);" class="xui-i-shortcutLink xui-i-activeLink xa-shortcut">今天</a></li>
+				<li class="xui-i-shortcut"><a data-value="0" href="javascript:void(0);" class="xui-i-shortcutLink xa-shortcut">今天</a></li>
 				<li class="xui-i-shortcut"><a data-value="1" href="javascript:void(0);" class="xui-i-shortcutLink xa-shortcut">昨天</a></li>
-				<li class="xui-i-shortcut"><a data-value="6" href="javascript:void(0);" class="xui-i-shortcutLink xa-shortcut">最近7天</a></li>
+				<li class="xui-i-shortcut"><a data-value="6" href="javascript:void(0);" class="xui-i-shortcutLink xa-shortcut xui-i-activeLink">最近7天</a></li>
 				<li class="xui-i-shortcut"><a data-value="29" href="javascript:void(0);" class="xui-i-shortcutLink xa-shortcut">最近30天</a></li>
 				<li class="xui-i-shortcut"><a data-value="89" href="javascript:void(0);" class="xui-i-shortcutLink xa-shortcut">最近90天</a></li>
 				<li class="xui-i-shortcut"><a data-value="-1" href="javascript:void(0);" class="xui-i-shortcutLink xa-shortcut">全部</a></li>
