--- a/weapp/static_v2/js/view/stats_order_list_filter_view/template.html
+++ b/weapp/static_v2/js/view/stats_order_list_filter_view/template.html
@@ -38,9 +38,9 @@
         <div class="fl ml40">
             快速查看：
             <ul class="xui-inline">
-                <li class="wui-i-shortcut"><a data-day="0" href="javascript:void(0);" class="wui-i-shortcutLink xa-quick-look wui-i-activeLink">今天</a></li>
+                <li class="wui-i-shortcut"><a data-day="0" href="javascript:void(0);" class="wui-i-shortcutLink xa-quick-look">今天</a></li>
                 <li class="wui-i-shortcut"><a data-day="1" href="javascript:void(0);" class="wui-i-shortcutLink xa-quick-look ml10">昨天</a></li>
-                <li class="wui-i-shortcut"><a data-day="6" href="javascript:void(0);" class="wui-i-shortcutLink xa-quick-look ml10">最近7天</a></li>
+                <li class="wui-i-shortcut"><a data-day="6" href="javascript:void(0);" class="wui-i-shortcutLink xa-quick-look ml10 wui-i-activeLink">最近7天</a></li>
                 <li class="wui-i-shortcut"><a data-day="29" href="javascript:void(0);" class="wui-i-shortcutLink xa-quick-look ml10">最近30天</a></li>
                 <li class="wui-i-shortcut"><a data-day="89" href="javascript:void(0);" class="wui-i-shortcutLink xa-quick-look ml10">最近90天</a></li>
                 <li class="wui-i-shortcut"><a data-day="-1" href="javascript:void(0);" class="wui-i-shortcutLink xa-quick-look ml10">全部</a></li>
