--- a/weapp/stats/templates/sales/product_summary.html
+++ b/weapp/stats/templates/sales/product_summary.html
@@ -156,6 +156,7 @@
         
         $('#start_date').val('{{start_date}}');
         $('#end_date').val('{{end_date}}');
+        view.updateTimeTags();
 
         $(document).delegate('.xa-date-search','click',function(event) {
             var args = {};
