--- a/weapp/stats/templates/manage/manage_summary.html
+++ b/weapp/stats/templates/manage/manage_summary.html
@@ -25,18 +25,16 @@
                         <div class="xui-i-wrapFirst h80 w100" >
                             <p class=" fl ml10 w140"><img class="fl" src="/static_v2/img/editor/icon_money.png"/><span class="xui-i-value f18 fl ml5">当前微品牌价值</span></p>
                             <div class="cb"></div>
-                            <p class="fl ml10 w150 pl10 f26" style="text-align:right;">￥{{ brand_value }}</p>
+                            <p class="fl ml10 w150 pl10 f24" style="text-align:right;">￥{{ brand_value }}</p>
                         </div>
                         <p class=" fr ml10 mr30 xui--wrapFirst-money">
-                            {% if value_sign == 1 %}
+                            {% ifequal value_sign 1 %}
                                 <img class="fl" src="/static_v2/img/editor/raise.png"/>
-                            {% endif %}
-                            {% if value_sign == -1 %}
+                            {% endifequal %}{% ifequal value_sign -1 %}
                                 <img class="fl" src="/static_v2/img/editor/down.png"/>
-                            {% endif %}
-                            {% if value_sign == 0 %}
-                            {% endif %}
-                            <span class="xui-i-value f16 fl ml5">{{ increase_percent }}</span>
+                            {% endifequal %}{% ifequal value_sign 0 %}
+                            {% endifequal %}
+                            <span class="xui-i-value f16 fl ml5">￥{{ bv_diff }}</span>
                         </p>
                     </td>
                 {% endif %}
