商品一大2小
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16435 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -148,15 +148,16 @@
 
         }else if($imageNav.length > 0){
             getWidth('.wui-imagenav');
+            var imgNavWidth = $imageNav.find('.wui-inner-pic').eq(0).width();
+            $imageNav.find('li').height(imgNavWidth);
 
         }
         function getWidth(component){
             var $component = $(component);
             var $inner_pic = $component.find('li .wui-inner-pic');
             $inner_pic.each(function() {
-                var width = $(this).width();
+                var width = $(this).width() ;
                 $(this).height(width);
-                $(this).parents('li').height(width);
             });
         } 
         </script>
