更新分享红包样式
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16437 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/market_tools/tools/share_red_envelope/css/share_red_envelope.css
+++ b/weapp/market_tools/tools/share_red_envelope/css/share_red_envelope.css
@@ -179,6 +179,11 @@ body{
 	box-shadow: 0 .1rem #c00006;
 	margin-top:.625rem;
 }
+.xui-shopping-btn:link,
+.xui-shopping-btn:active,
+.xui-shopping-btn:visited{
+	color:#f1354f;
+}
 .xui-other{
 	background: #e93131;
 	padding:0 .5rem;
