--- a/weapp/termite/workbench/templates/workbench/new_jqm_preview_page.html
+++ b/weapp/termite/workbench/templates/workbench/new_jqm_preview_page.html
@@ -112,8 +112,7 @@
                 hm.src = "/weixin/js/config/?path="+encodeURIComponent(location.href);
                 var s = document.getElementsByTagName("script")[0]; 
                 s.parentNode.insertBefore(hm, s);
-                /*
-                 * 微信分享按钮事件
+                /* 微信分享按钮事件
                  * 注意：
                  * 1. 所有的JS接口只能在公众号绑定的域名下调用，公众号开发者需要先登录微信公众平台进入“公众号设置”的“功能设置”里填写“JS接口安全域名”。
                  * 2. 如果发现在 Android 不能分享自定义内容，请到官网下载最新的包覆盖安装，Android 自定义分享接口需升级至 6.0.2.58 版本及以上。
