git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16456 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/static_v2/js/view/weixin_menu_item/template.html
+++ b/weapp/static_v2/js/view/weixin_menu_item/template.html
@@ -4,7 +4,7 @@
 	<div class="xui-menu-left-item pa">
 		<div class="xui-one-menu active">
 			<li>一级菜单</li>
-			<input name="oneMenuText" class="form-control ml0" readonly="readonly" value="标题">
+			<input name="oneMenuText" class="form-control ml0" readonly="readonly" value="标题" maxlength="5">
 			<a href="javascript:void(0);" class="xa-edit-one-menu">编辑</a>
 		</div>
 		<div class="xui-two-menu">
