git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16459 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/static_v2/js/view/weixin_menu_item/template.html
+++ b/weapp/static_v2/js/view/weixin_menu_item/template.html
@@ -20,7 +20,7 @@
 
 <script id="weixin-one-menu-item-tmpl-src" type="text/x-jquery-tmpl">
 	<div class="pt10 mb5" style="cursor: move;">
-		<input name="oneMenuItemText" class="form-control ml0" readonly="readonly">
+		<input name="oneMenuItemText" class="form-control ml0" readonly="readonly" maxlength="10">
 		<a href="javascript:void(0);" class="xa-edit-one-menu-item xui-edit-one-menu-item">编辑</a>
 		<a href="javascript:void(0);" class="xa-del-one-menu-item xui-del-one-menu-item">删除</a>
 	</div>
