[update]: *修改分享链接
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16463 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -187,7 +187,7 @@
                                 project_id: W.projectId,
                                 module: 'user_center',
                                 target_api: 'shared_url/record',
-                                link: window.location.href,
+                                link: link,
                                 title:W.sharePageTitle
                             }),
                             success: function(data) {
