--- a/weapp/templates/new_jqm_content_base.html
+++ b/weapp/templates/new_jqm_content_base.html
@@ -238,7 +238,7 @@
                                 project_id: W.projectId,
                                 module: 'user_center',
                                 target_api: 'shared_url/record',
-                                link: window.location.href,
+                                link: link,
                                 title:W.sharePageTitle
                             }),
                             success: function(data) {
